--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,51 +1,15 @@
-@import 'bootstrap';
-
-body {
-  margin-top: 75px;
-}
-
-// Navbar
-
-.navbar {
-  background: rgb(17, 48, 224);
-  padding-bottom: 20px;
-  height:75px;
- }
- 
- .navbar-default .navbar-brand {
-   padding-top: 25px;
-   font-size: 150%;
-   font-weight: bold;
-   color: #ffffff;
- }
- 
- .navbar-default .navbar-brand:hover {
-   color: #4C5B5C;
- }
- 
- .navbar-default {
-   border: rgb(0, 2, 65);
- }
- 
- .navbar-nav {
-   padding-top: 10px;
-   padding-right: 20px;
- }
- 
- .navbar-default .navbar-nav li > a {
-   font-weight: bold;
-   font-size: 130%;
-   color: #ffffff;
- }
- 
- .navbar-default .navbar-nav li > a:hover {
-   color: #4C5B5C;
- }
-
- .navbar-default .navbar-nav > .active > a {
-   color: #06BEE1;
-   border: 1px solid #06BEE1;
-   background-color: rgb(17, 48, 224);
-   padding-bottom: 0;
-   display: table-cell;
- }
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
+ * vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+ * files in this directory. Styles in this file should be added after the last require_* statement.
+ * It is generally better to create a new file per style scope.
+ *
+ *= require_tree .
+ *= require_self
+ */
