created form partial for new and edit, created test for updating exercise

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -69,9 +69,18 @@ body {
     margin-top: 15px;
   }
 
+  // Flash styling
+  .alert-alert {
+    @extend .alert-danger;
+  }
+  
+  .alert-notice {
+    @extend .alert-warning;
+  }
+
   // Devise form buttons
 
-  .form-btn {
+  .btn {
     width: 100%;
   }
 
