added view counter for exercises

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -150,6 +150,16 @@ body {
   margin: 10px;
   background-color: rgb(77, 207, 233);
 }
+
+  // Show page
+
+#start { font-size: 1em; }
+#started { font-size: 1em; }
+#startedby { font-size: 1.2em; }
+#visited { font-size: 1.2em; }
+#visit { font-size: 1em; }
+.post-title { font-size: 1.5em; text-decoration: none; color: #990099; }
+
   // Chart Styling
   
 path {
