deleted view model, made it column in exercise

--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -13,7 +13,7 @@
         <div class="panel-footer">
           <span class="glyphicon glyphicon-user" id="start"></span> 
           <label id="started">By <p id='startedby'><%=@exercise.user.first_name%></p></label> | 
-          <span class="glyphicon glyphicon-eye-open" id="visit"></span> <p id="visited">Views <%= @exercise.views.count %> Times</p>
+          <span class="glyphicon glyphicon-eye-open" id="visit"></span> <p id="visited">Views <%= @view.count %> Times</p>
         </div>
       </div>
     </div>
