--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,6 +1,6 @@
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <div class="form-group">
-    <%= link_to "Forgot your password?", new_password_path(resource_name), class: 'btn btn-danger form-btn' %><br />
+    <%= link_to "Forgot your password?", new_password_path(resource_name), class: 'btn btn-dev-del form-btn' %><br />
   </div>
 <% end %>
 
