--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -1,19 +1,19 @@
 <div class="container">
 	<div class="row">
-    <div class="col-md-6">
+    <div class="col-md-10 col-md-offset-1">
       <div class="panel panel-default">
         <div class="panel-heading">
           <strong><p class='post-title'> Workout date: <%= @exercise.workout_date %></p></strong>
         </div>
         <div class="panel-body">
           <p>
-            Lorem ipsum dolor sit amet, id nec conceptam conclusionemque. Et eam tation option. Utinam salutatus ex eum. Ne mea dicit tibique facilisi, ea mei omittam explicari conclusionemque ad nobis propriae quaerendum sea. sum dolor sit amet, id nec conceptam conclusionemque.sum dolor sit amet.
+            <%= @exercise.workout %>
           </p>        
         </div>                  
         <div class="panel-footer">
           <span class="glyphicon glyphicon-user" id="start"></span> 
           <label id="started">By <p id='startedby'><%=@exercise.user.first_name%></p></label> | 
-          <span class="glyphicon glyphicon-eye-open" id="visit"></span> <p id="visited">Views <%= @view.count %> Times</p>
+          <span class="glyphicon glyphicon-eye-open" id="visit"></span><%= counter_pluralize %>
         </div>
       </div>
     </div>
