--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class='col-md-8 col-md-offset-2'>
+  <div class='col-md-8 col-md-offset-2 form-dev'>
     <div class='text-center'>
       <h2>Edit <%= resource_name.to_s.humanize %></h2>
       <h4>(Currently logged in as: <%= "#{current_user.full_name}" %>)</h4>
@@ -11,7 +11,7 @@
 
         <div class="form-group">
           <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control dev-form-field' %>
         </div>
 
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -20,7 +20,7 @@
 
         <div class="form-group">
           <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control dev-form-field' %>
           <% if @minimum_password_length %>
             <br />
             <em><%= @minimum_password_length %> characters minimum</em>
@@ -29,22 +29,22 @@
 
         <div class="form-group">
           <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control dev-form-field' %>
         </div>
 
         <div class="form-group">
           <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-          <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
+          <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control dev-form-field' %>
         </div>
 
         <div class="form-group">
-          <%= f.submit "Update", class: 'btn form-btn btn-primary' %>
+          <%= f.submit "Update", class: 'btn form-btn btn-dev-upd' %>
         </div>
       <% end %>
     </div>
     <div>
 
-      <h3 class='text-center', style="color: red">Unhappy?</h3>
+      <h3 class='text-center', style="color: #C52233">Unhappy?</h3>
 
       <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger form-btn' %></p>
     </div>
