--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class='col-md-8 col-md-offset-2'>
+  <div class='col-md-8 col-md-offset-2 form-dev'>
     <div class='text-center'>
       <h2>Sign up</h2>
     </div>
@@ -9,17 +9,17 @@
 
         <div class="form-group">
           <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control dev-form-field' %>
         </div>
 
         <div class="form-group">
           <%= f.label :first_name, 'First name' %><br />
-          <%= f.text_field :first_name, class: 'form-control' %>
+          <%= f.text_field :first_name, class: 'form-control dev-form-field' %>
         </div>
 
         <div class="form-group">
           <%= f.label :last_name, 'Last name' %><br />
-          <%= f.text_field :last_name, class: 'form-control' %>
+          <%= f.text_field :last_name, class: 'form-control dev-form-field' %>
         </div>
 
         <div class="form-group">
@@ -27,16 +27,16 @@
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control dev-form-field' %>
         </div>
 
         <div class="form-group">
           <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control dev-form-field' %>
         </div>
 
         <div class="form-group">
-          <%= f.submit "Sign up", class: 'btn btn-primary form-btn' %>
+          <%= f.submit "Sign up", class: 'btn btn-primary form-btn btn-dev-upd' %>
         </div>
 
         <%= render "devise/shared/links" %>
