--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -24,7 +24,7 @@
       <%= f.label :workout_date, 'Activity date' %>
     </div>
     <div class='col-md-10'>
-      <%= f.date_field :workout_date, class: 'form-control' %>
+      <%= f.text_field :workout_date, class: 'form-control', id: 'exercise_workout_date' %>
     </div>
   </div>
 
