add chart to workout

--- a/app/views/exercises/_list_exercises.html.erb
+++ b/app/views/exercises/_list_exercises.html.erb
@@ -19,6 +19,7 @@
         </div>
       <% end %>  
       </div>
+      <%= content_tag :div, '', id: 'chart', data: { workouts: @exercises } %>
     </div>
   </div>
 </div>
