--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,6 +10,12 @@
         <%= link_to 'Athletes Den', root_path, class: 'navbar-brand' %>
       </div>
       <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
+        <%= form_tag(search_dashboards_path, class: 'navbar-form navbar-left', role: 'search') do %>
+          <div class='form-group'>
+            <%= text_field_tag :search_name, nil, placeholder: 'Search for friends', class: 'form-control' %>
+          </div>
+            <%= submit_tag 'Search', class: 'btn btn-default' %>
+        <% end %>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li><%= link_to 'My Lounge', user_exercises_path(current_user) %></li>
