displaying friends on lounge page, css styling updates

--- a/app/views/dashboards/search.html.erb
+++ b/app/views/dashboards/search.html.erb
@@ -1,6 +1,6 @@
 <div class='row search-results'>
   <% @athletes.each do |athlete| %>
-    <div class='col-md-10 col-md-offset-2 well member'>
+    <div class='col-md-10 col-md-offset-2 well search-well member'>
       <%= athlete.full_name %>
     </div>
   <% end %>
