--- a/app/views/exercises/_list_exercises.html.erb
+++ b/app/views/exercises/_list_exercises.html.erb
@@ -1,25 +1,32 @@
 <div class='container'>
   <div class='row'>
     <div class='col col-xs-12'>
-      <div>
-        <%= user_id? %>
-      </div>
-      <div class='exer-grids'>
-      <% @exercises.each do |exercise| %>
-        <div class='grid'>
-          <div class='entry-body'>
-            <h3>
-            <%= link_to "Exercise date: #{exercise.workout_date}", user_exercise_path(@user, exercise), id: 'Exercise-show' %></a></h3>
-            <span class="cat">Created: <%= time_ago_in_words(exercise.created_at) %> ago</span>
-            <p><%= truncate(exercise.workout, length: 250) %></p>
-            <div class="row">
-              <%= exercise_owner(exercise) %>
-            </div>
-          </div>      
+      <div class='col-xs-6'>
+        <div>
+          <%= user_id? %>
         </div>
-      <% end %>  
+        <div class='exer-grids'>
+        <% @exercises.each do |exercise| %>
+          <div class='grid'>
+            <div class='entry-body'>
+              <h3>
+              <%= link_to "Exercise date: #{exercise.workout_date}", user_exercise_path(@user, exercise), id: 'Exercise-show' %></a></h3>
+              <span class="cat">Created: <%= time_ago_in_words(exercise.created_at) %> ago</span>
+              <p><%= truncate(exercise.workout, length: 250) %></p>
+              <div class="row">
+                <%= exercise_owner(exercise) %>
+              </div>
+            </div>      
+          </div>
+        <% end %>  
+        </div>
+        <div class='workout-chart'>
+          <%= content_tag :div, '', id: 'chart', data: { workouts: @exercises } %>
+        </div>
       </div>
-      <%= content_tag :div, '', id: 'chart', data: { workouts: @exercises } %>
+      <div class='col-xs-5 col-xs-offset-1'>
+        <%= render partial: 'displaying_friends' %>
+      </div>
     </div>
   </div>
 </div>
