--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,6 +8,10 @@ body {
   font-family: 'Mali', cursive;
 }
 
+.container {
+  width: 90%;
+}
+
 .btn {
   width: 100%;
 }
@@ -59,7 +63,7 @@ body {
 
  // Dashboard Index
 
-.well {
+.search-well {
   display: inline;
   margin: 10px;
   height: 60px;
@@ -134,7 +138,7 @@ body {
 
 .exer-grids .grid {
     background-color: rgb(219, 218, 218);
-    width: calc(33.33% - 30px);
+    width: calc(50% - 30px);
     float: left;
     padding: 15px;
     margin: 20px 15px 15px;
@@ -205,6 +209,21 @@ body {
   background-color: #EC4E20;
 }
 
+.friend-well {
+  height: 60px;
+  color: black;
+  background-color: #d6dadc;
+}
+
+.friend-link a {
+  color: #D4AF37;
+}
+
+.friend-link a:hover {
+  color: black;
+  text-decoration: none;
+}
+
   // Show page
 
 #start { font-size: 1em; }
@@ -232,6 +251,11 @@ body {
 }
 
   // Chart Styling
+
+.workout-chart {
+  border: 5px solid #d6dadc;
+  margin-top: 25px;
+}
   
 path {
   stroke: steelblue; stroke-width: 2; fill: none;
