--- a/app/views/exercises/_displaying_friends.html.erb
+++ b/app/views/exercises/_displaying_friends.html.erb
@@ -4,10 +4,10 @@
     <div class='col-xs-2'></div>
     <div class='well friend-well col-xs-8'>
       <div class='col-xs-8 friend-link'>
-        <%= link_to f.full_name, friendship_path(current_user.current_friendship(f)) %>    
+        <%= link_to f.full_name, friendship_path(@user.current_friendship(f)) %>    
       </div>
       <div class='col-xs-4'>
-        <%= link_to "Unfollow", friendship_path(current_user.current_friendship(f)), method: :delete, data: { confirm: "Are you sure you want to unfollow?" }, class: 'btn btn-del ed-btn' %>
+        <%= link_to "Unfollow", friendship_path(@user.current_friendship(f)), method: :delete, data: { confirm: "Are you sure you want to unfollow?" }, class: 'btn btn-del ed-btn' %>
       </div>
     </div>
     <div class='col-xs-2'></div>
