--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,10 +11,16 @@
       </div>
       <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
         <%= form_tag(search_dashboards_path, class: 'navbar-form navbar-left', role: 'search') do %>
-          <div class='form-group'>
-            <%= text_field_tag :search_name, nil, placeholder: 'Search for friends', class: 'form-control' %>
+          <div class='row'>
+            <div class='col-md-6'>
+              <div class='form-group'>
+                <%= text_field_tag :search_name, nil, placeholder: 'Search for friends', class: 'form-control' %>
+              </div>
+            </div>
+            <div class='col-md-5 col-md-offset-1'>
+              <%= submit_tag 'Search', class: 'btn btn-default' %>
+            </div>
           </div>
-            <%= submit_tag 'Search', class: 'btn btn-default' %>
         <% end %>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
