--- a/app/views/exercises/_displaying_friends.html.erb
+++ b/app/views/exercises/_displaying_friends.html.erb
@@ -1,15 +1,38 @@
-<h3 class='text-center'>Friends following:</h3>
-<% @friends.each do |f| %>
-  <div class='row'>
-    <div class='col-xs-2'></div>
-    <div class='well friend-well col-xs-8'>
-      <div class='col-xs-8 friend-link'>
-        <%= link_to f.full_name, friendship_path(@user.current_friendship(f)) %>    
-      </div>
-      <div class='col-xs-4'>
-        <%= link_to "Unfollow", friendship_path(@user.current_friendship(f)), method: :delete, data: { confirm: "Are you sure you want to unfollow?" }, class: 'btn btn-del ed-btn' %>
-      </div>
+<div class='col-lg-5'>
+  <div id='chat-window'>
+    <header><%= current_room.name %></header>
+
+    <div id='followers'>
+      <% @followers.each do |f| %>
+        <%= link_to f.user.full_name, user_exercises_path(current_user, roomId: f.user.room.id), class: 'followers' %>
+      <% end %>
     </div>
-    <div class='col-xs-2'></div>
+
+    <div id='chat-box' data-channel='rooms' data-room-id=<%= current_room.id %>>
+      <% @messages.each do |msg| %>
+        <%= render partial: 'shared/message', locals: { msg: msg } %>
+      <% end %>
+    </div>
+    <div id='form-box'>
+      <%= form_with model: @message do |f| %>
+        <%= f.text_field :body, id: 'message-field', class: 'form-control pull-left' %>
+        <%= f.submit 'Post', class: 'btn btn-default', id: 'post-btn' %>
+      <% end %>
+    </div>
   </div>
-<% end %>
+  <h3 class='text-center'>Friends following:</h3>
+  <% @friends.each do |f| %>
+    <div class='row'>
+      <div class='col-xs-2'></div>
+      <div class='well friend-well col-xs-8'>
+        <div class='col-xs-8 friend-link'>
+          <%= link_to f.full_name, friendship_path(@user.current_friendship(f)) %>    
+        </div>
+        <div class='col-xs-4'>
+          <%= link_to "Unfollow", friendship_path(@user.current_friendship(f)), method: :delete, data: { confirm: "Are you sure you want to unfollow?" }, class: 'btn btn-del ed-btn' %>
+        </div>
+      </div>
+      <div class='col-xs-2'></div>
+    </div>
+  <% end %>
+</div>
