--- a/app/views/shared/_message.html.erb
+++ b/app/views/shared/_message.html.erb
@@ -1,4 +1,3 @@
 <div class='message-row'>
-  <p class='message-body'><%= msg.body %></p>
-  <span>"<small><%= msg.user.full_name %></small>"</span>
+  <p class='message-body'><small><%= msg.user.full_name %>:</small> "<%= msg.body %>"</p>
 </div>
