--- a/app/views/exercises/_displaying_friends.html.erb
+++ b/app/views/exercises/_displaying_friends.html.erb
@@ -1,17 +1,24 @@
 <div class='col-lg-5'>
   <div id='chat-window'>
-    <header><%= current_room.name %></header>
-
-    <div id='followers'>
-      <% @followers.each do |f| %>
-        <%= link_to f.user.full_name, user_exercises_path(current_user, roomId: f.user.room.id), class: 'followers' %>
-      <% end %>
-    </div>
-
-    <div id='chat-box' data-channel='rooms' data-room-id=<%= current_room.id %>>
-      <% @messages.each do |msg| %>
-        <%= render partial: 'shared/message', locals: { msg: msg } %>
-      <% end %>
+    <header><%= current_room.name %>'s Chatroom</header>
+    <div class='row'>
+      <div class='col-xs-3 follower-div'>
+        <div id='followers'>
+          <p class='chat-title'>Chatrooms:</p>
+          <p class='self-chat'><%= link_to 'Myself', user_exercises_path(current_user, roomId: @user.room.id), class: 'followers' %></p>
+          Friends:
+          <% @followers.each do |f| %>
+            <%= link_to f.user.first_name + ' ' + f.user.last_name[0] + '.', user_exercises_path(current_user, roomId: f.user.room.id), class: 'followers' %>
+          <% end %>
+        </div>
+      </div>
+      <div class='col-xs-9'>
+        <div id='chat-box' data-channel='rooms' data-room-id=<%= current_room.id %>>
+          <% @messages.each do |msg| %>
+            <%= render partial: 'shared/message', locals: { msg: msg } %>
+          <% end %>
+        </div>
+      </div>
     </div>
     <div id='form-box'>
       <%= form_with model: @message do |f| %>
