--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <header role='banner'>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top navbar-shrink" role="navigation">
     <div class="container-fluid"> 
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> 
@@ -9,19 +9,19 @@
         </button>
         <%= link_to 'Athletes Den', root_path, class: 'navbar-brand' %>
       </div>
-      <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
+      <div class="navbar-collapse collapse navbar-right" id="bs-example-navbar-collapse-1">
         <%= form_tag(search_dashboards_path, class: 'navbar-form navbar-left', role: 'search') do %>
-          <div class='row'>
-            <div class='col-md-6'>
-              <div class='form-group'>
-                <%= text_field_tag :search_name, nil, placeholder: 'Search for friends', class: 'form-control' %>
+            <div class='row'>
+              <div class='col-md-6'>
+                <div class='form-group min-search'>
+                  <%= text_field_tag :search_name, nil, placeholder: 'Search for friends', class: 'form-control' %>
+                </div>
+              </div>
+              <div class='col-md-5 col-md-offset-1'>
+                <%= submit_tag 'Search', class: 'btn btn-default' %>
               </div>
             </div>
-            <div class='col-md-5 col-md-offset-1'>
-              <%= submit_tag 'Search', class: 'btn btn-default' %>
-            </div>
-          </div>
-        <% end %>
+          <% end %>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li><%= link_to 'My Lounge', user_exercises_path(current_user) %></li>
