--- a/app/views/exercises/_create_exercise.html.erb
+++ b/app/views/exercises/_create_exercise.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'New Workout', new_user_exercise_path(@user), class: 'btn btn-primary btn-new' %>
+<%= link_to 'New Workout', new_user_exercise_path(current_user), class: 'btn btn-primary btn-new' %>
