--- a/app/views/exercises/_displaying_friends.html.erb
+++ b/app/views/exercises/_displaying_friends.html.erb
@@ -5,22 +5,22 @@
       <div class='col-xs-3 follower-div'>
         <div id='followers'>
           <p class='chat-title'>Chatrooms:</p>
-          <p class='self-chat'><%= link_to 'Myself', user_exercises_path(current_user, roomId: @user.room.id), class: 'followers' %></p>
+          <p class='self-chat'><%= link_to 'Myself', user_exercises_path(current_user, roomId: current_user.room.id), class: 'followers' %></p>
           Friends:
           <% @followers.each do |f| %>
             <%= link_to f.user.first_name + ' ' + f.user.last_name[0] + '.', user_exercises_path(current_user, roomId: f.user.room.id), class: 'followers' %>
           <% end %>
         </div>
       </div>
-      <div class='col-xs-9'>
+      <div class='col-xs-9' id='messages-box'>
         <div id='chat-box' data-channel='rooms' data-room-id=<%= current_room.id %>>
-          <% @messages.each do |msg| %>
-            <%= render partial: 'shared/message', locals: { msg: msg } %>
+          <% @messages.each do |message| %>
+            <%= render partial: 'shared/message', locals: { message: message } %>
           <% end %>
         </div>
       </div>
     </div>
-    <div id='form-box'>
+    <div id='form-box messages-box'>
       <%= form_with model: @message do |f| %>
         <%= f.text_field :body, id: 'message-field', class: 'form-control pull-left' %>
         <%= f.submit 'Post', class: 'btn btn-default', id: 'post-btn' %>
@@ -33,10 +33,10 @@
       <div class='col-xs-2'></div>
       <div class='well friend-well col-xs-8'>
         <div class='col-xs-8 friend-link'>
-          <%= link_to f.full_name, friendship_path(@user.current_friendship(f)) %>    
+          <%= link_to f.full_name, friendship_path(current_user.current_friendship(f)) %>    
         </div>
         <div class='col-xs-4'>
-          <%= link_to "Unfollow", friendship_path(@user.current_friendship(f)), method: :delete, data: { confirm: "Are you sure you want to unfollow?" }, class: 'btn btn-del ed-btn' %>
+          <%= link_to "Unfollow", friendship_path(current_user.current_friendship(f)), method: :delete, data: { confirm: "Are you sure you want to unfollow?" }, class: 'btn btn-del ed-btn' %>
         </div>
       </div>
       <div class='col-xs-2'></div>
