--- a/app/views/exercises/_list_exercises.html.erb
+++ b/app/views/exercises/_list_exercises.html.erb
@@ -10,7 +10,7 @@
           <div class='grid'>
             <div class='entry-body'>
               <h3>
-              <%= link_to "Exercise date: #{exercise.workout_date}", user_exercise_path(@user, exercise), id: 'Exercise-show' %></a></h3>
+              <%= link_to "Exercise date: #{exercise.workout_date}", user_exercise_path(current_user, exercise), id: 'Exercise-show' %></a></h3>
               <span class="cat">Created: <%= time_ago_in_words(exercise.created_at) %> ago</span>
               <p><%= truncate(exercise.workout, length: 250) %></p>
               <div class="row">
