--- a/app/views/shared/_message.html.erb
+++ b/app/views/shared/_message.html.erb
@@ -1,3 +1,3 @@
 <div class='message-row'>
-  <p class='message-body'><small><%= msg.user.full_name %>:</small> "<%= msg.body %>"</p>
+  <p class='message-body'><small><%= message.user.full_name %>:</small> "<%= message.body %>"</p>
 </div>
